--- a/index.html
+++ b/index.html
@@ -1,1 +1,20 @@
-
+<!DOCTYPE html>
+<html>
+<head>
+    <title>Calc</title>
+    <link rel="stylesheet" href="css/style.css">
+    <script src="js/script.js" defer></script>
+</head>
+<body>
+    <form>
+      <input name="field1" type="text">
+      <input name="field2" type="text">
+      <select name="select1">
+        <option value="v1">Вариант 1</option>
+        <option value="v2">Вариант 2</option>
+      </select>
+      <button id="button1" onclick="return click1();">OK</button>
+    </form>
+    <div id="result"></div>
+</body>
+</html>
