--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
 </head>
 <body>
     <form>
-      <input name="field1" type="text">
-      <input name="field2" type="text">
+      <input name="inputField" type="text">
       <select name="select1">
-        <option value="v1">Вариант 1</option>
-        <option value="v2">Вариант 2</option>
+        <option value="v1">Guitar (cost = 500$)</option>
+        <option value="v2">Drums (cost = 1000$)</option>
+        <option value="v3">Piano (cost = 1500$)</option>
       </select>
-      <button id="button1" onclick="return click1();">OK</button>
+      <button type="button" id="button">OK</button>
     </form>
     <div id="result"></div>
 </body>
